# awulff-pico-playground

./: .gitignore
adc_fft/: CMakeLists.txt  adc_fft.c  backup2.c
adc_time/: .pico_sdk_import.cmake.icloud  CMakeLists.txt  adc_time.c
pico-clapper/: .#CMakeLists 2.txt  CMakeLists.txt  README.md
pico-clapper/pico_neopixels/: Adafruit_NeoPixel.cpp  CMakeLists.txt
pico-clapper/pico_neopixels/include/: Adafruit_NeoPixel.h  Adafruit_NeoPixel.hpp
pico-clapper/source/: .#main 2.cpp  lights.cpp  lights.h  main.cpp
pico-daq/: .#pico_daq.cpp  CMakeLists.txt  README.md  base64.cpp  base64.h  pico_daq.cpp
pico-daq/py/: b64_16_to_wave.py  b64_float_to_wave.py
pico-light-voice/: .#README.md  .gitignore  CMakeLists.txt
pico-light-voice/pico_neopixels/: ws2812byte.pio
pico-light-voice/source/: .#lights 3.cpp  lights.cpp  main.cpp
pico-voice-v1/: CMakeLists.txt  README.md
pico-voice-v1/source/: main.cpp
